--- a/templates/index.html
+++ b/templates/index.html
@@ -342,6 +342,7 @@
                 <button id="importOpmlBtn" class="modal-button"
                     onclick="document.getElementById('fileInput').click()">📄 OPML取り込み</button>
                 <button id="exportOpmlBtn" class="modal-button" onclick="exportOpml()">📤 OPMLエクスポート</button>
+                <button id="favs" class="modal-button" onclick="window.location.href='/favs'">スターしたアイテム</button>
                 <button id="findEntriesBtn" class="modal-button" onclick="window.location.href='/find'">🔍
                     過去のエントリを検索...</button>
             </div>
